--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ProjectEcomm"
         tools:targetApi="31">
         <activity
+            android:name=".register_activity"
+            android:exported="false" />
+        <activity
             android:name=".start_activity"
             android:exported="true">
             <intent-filter>
@@ -23,10 +26,10 @@
         </activity>
         <activity
             android:name=".login_activity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
