--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectEcomm"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".ScannerActivity"-->
-<!--            android:exported="false" />-->
         <activity
             android:name=".RolActivity"
             android:exported="false" />
@@ -24,7 +21,6 @@
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
-
         <activity
             android:name=".StartActivity"
             android:exported="true">
@@ -34,15 +30,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
-            android:exported="false"></activity>
-
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
-
     </application>
 
 </manifest>
