--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +16,9 @@
         android:theme="@style/Theme.ProjectEcomm"
         tools:targetApi="31">
         <activity
+            android:name=".AccountVendorActivity"
+            android:exported="false" />
+        <activity
             android:name=".RolActivity"
             android:exported="false" />
         <activity
@@ -20,6 +26,12 @@
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CartShoppingActivity"
             android:exported="false" />
         <activity
             android:name=".StartActivity"
