--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature android:name="android.hardware.camera"
-        android:required="true"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +15,19 @@
         android:theme="@style/Theme.ProjectEcomm"
         tools:targetApi="31">
         <activity
+            android:name=".ShopActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EventsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PaymentGatewayActivity"
+            android:exported="false" />
+        <activity
             android:name=".AccountVendorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DetailProductActivity"
             android:exported="false" />
         <activity
             android:name=".RolActivity"
